<resources>
    <string name="app_name">Lamp</string>
    <string name="id_downloading">Downloading</string>
    <string name="id_settings">Settings</string>
    <string name="id_getinfo">GetInfo</string>
    <string name="id_new_address">New Address</string>
    <string name="id_connect">Connect</string>
    <string name="id_start">Start</string>
    <string name="id_stop">Stop</string>
    <string name="id_lightning_daemon_options">Lightning daemon options</string>
    <string name="id_select_the_network_parameters">Select the network parameters</string>
    <string name="id_log_level">Log level</string>
    <string name="id_bitcoind_rpc_options">Bitcoind RPC options</string>
    <string name="id_bitcoind_rpc_username">Bitcoind RPC username</string>
    <string name="id_bitcoind_rpc_password">Bitcoind RPC password</string>
    <string name="id_bitcoind_rpc_host">Bitcoind RPC host to connect to</string>
    <string name="id_bitcoind_rpc_port">Bitcoind RPC port</string>
    <string name="id_clear_memory">Clear memory</string>
    <string name="id_erase_logs_file">Erase logs file</string>
    <string name="id_erase_data_dir">Erase data dir</string>
    <string name="id_erase_binary_dir">Erase binary dir</string>
    <string name="id_log">Log</string>
    <string name="id_download">Download</string>
    <string name="id_console">Console</string>
    <string name="id_scan">Scan</string>
    <string name="id_paste_from_clipboard">Paste from clipboard</string>
    <string name="id_set_a_socks_v5">Set a socks v5 proxy IP address and port</string>
    <string name="id_activate_a_proxy">Activate a proxy</string>
    <string name="id_set_an_ip_address">Set an IP address (v4 or v6) or .onion v2/v3 to announce, but not listen on</string>
    <string name="id_accounce_address">Announce address</string>
    <string name="id_proxy">Proxy</string>
    <string name="id_network_options">Network options</string>
    <string name="id_invoice">Invoice</string>
    <string name="id_bind_address">Bind address</string>
    <string name="id_set_an_ip_address_to_listen_on">Set an IP address (v4 or v6) to listen on, but not announce</string>
    <string name="id_alias">Alias</string>
    <string name="id_up_to_32_byte_alias_for_node">Up to 32-byte alias for node</string>
    <string name="id_enable_tor">Enable Tor deamon</string>
    <string name="id_if_tor_is_enabled">If Tor is enabled, the following network configuration will be overwritten</string>
    <string name="id_bolt11">Bolt11</string>
    <string name="id_expired_in">Expired in</string>
    <string name="id_millisatoshi">MilliSatoshi</string>
    <string name="id_label">Label</string>
    <string name="id_description">Description</string>
    <string name="id_confirm">confirm</string>
    <string name="id_transactions">Transactions</string>
    <string name="id_enable_esplora">Enable Esplora plugin</string>
    <string name="id_using_esplora_plugin">Using Esplora plugin as bitcoind backend</string>
    <string name="action_settings">Settings</string>
    <string name="id_channels">Channels</string>
    <string name="id_history">History</string>
    <string name="id_withdraw">Withdraw</string>
    <string name="id_destination_address">Destination address</string>
    <string name="id_satoshi">Satoshi</string>
    <string name="id_backup_and_restore"><![CDATA[Backup & restore]]></string>
    <string name="id_export_data">Export data</string>
    <string name="id_import_data">Import data</string>
    <string name="id_esplora_api_endpoint">Esplora api endoint uri</string>
    <string name="id_fund_channel">Fund Channel</string>
    <string name="id_node_uri">Node URI</string>
    <string name="id_warning">Warning</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_main">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_pay_view">PayViewActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="title_activity_main2">MainActivity2</string>
</resources>
