<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/id_lightning_daemon_options">

        <EditTextPreference
            app:key="alias"
            app:title="@string/id_alias"
            app:summary="@string/id_up_to_32_byte_alias_for_node"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="testnet"
            app:entries="@array/networks"
            app:entryValues="@array/networks"
            app:key="network"
            app:title="@string/id_select_the_network_parameters"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="io"
            app:entries="@array/loglevels"
            app:entryValues="@array/loglevels"
            app:key="log-level"
            app:title="@string/id_log_level"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/id_network_options">

        <SwitchPreference
            app:key="enabled-tor"
            app:title="@string/id_enable_tor"
            app:defaultValue="true"
            app:summary="@string/id_if_tor_is_enabled"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:key="announce-addr"
            app:title="@string/id_accounce_address"
            app:summary="@string/id_set_an_ip_address"
            app:useSimpleSummaryProvider="true"/>

        <EditTextPreference
            app:key="bind-addr"
            app:title="@string/id_bind_address"
            app:summary="@string/id_set_an_ip_address_to_listen_on"
            app:useSimpleSummaryProvider="true" />

        <SwitchPreference
            app:key="proxy-enabled"
            app:defaultValue="false"
            app:title="@string/id_activate_a_proxy" />

        <EditTextPreference
            app:key="proxy"
            app:dependency="proxy-enabled"
            app:title="@string/id_proxy"
            app:summary="@string/id_set_a_socks_v5"
            app:useSimpleSummaryProvider="true"
            app:defaultValue="127.0.0.1:9050" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/id_bitcoind_rpc_options">

        <SwitchPreference
            app:key="enabled-esplora"
            app:title="@string/id_enable_esplora"
            app:defaultValue="true"
            app:summary="@string/id_using_esplora_plugin"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:key="bitcoin-rpcuser"
            app:title="@string/id_bitcoind_rpc_username"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:key="bitcoin-rpcpassword"
            app:title="@string/id_bitcoind_rpc_password"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:key="bitcoin-rpcconnect"
            app:title="@string/id_bitcoind_rpc_host"
            app:useSimpleSummaryProvider="true"
            app:defaultValue="127.0.0.1" />

        <EditTextPreference
            app:key="bitcoin-rpcport"
            app:title="@string/id_bitcoind_rpc_port"
            app:useSimpleSummaryProvider="true"
            app:defaultValue="18332" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/id_clear_memory">

        <Preference
            app:key="clearlogs"
            app:title="@string/id_erase_logs_file" />

        <Preference
            app:key="cleardata"
            app:title="@string/id_erase_data_dir" />

        <Preference
            app:key="clearbinary"
            app:title="@string/id_erase_binary_dir" />

    </PreferenceCategory>

</PreferenceScreen>
