<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools">
    <item
        android:id="@+id/action_invoice"
        android:orderInCategory="100"
        android:title="@string/id_invoice"
        android:icon="@drawable/ic_sats"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_channels"
        android:icon="@android:drawable/ic_menu_sort_by_size"
        android:orderInCategory="100"
        android:title="@string/id_channels"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_new_address"
        android:orderInCategory="100"
        android:title="@string/id_new_address"/>
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/id_settings"/>
    <item
        android:id="@+id/action_console"
        android:orderInCategory="100"
        android:title="@string/id_console"/>
    <item
        android:id="@+id/action_log"
        android:orderInCategory="100"
        android:title="@string/id_log"/>
</menu>